--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,3 +5,13 @@ title: 'OrcaUI'
 module:
   imports:
     - path: github.com/imfing/hextra
+
+menu:
+  main:
+    - name: Search
+      params:
+        type: search
+    - name: Github
+      url: https://github.com/joashxu/OrcaUI
+      params:
+        icon: github
